# CIFAR10_ImageClassification

./: .gitignore  README.md  main.py  pyproject.toml
Assignments/: Vectorizing_Logistic_Regression.py
Project1/: ModelArch.drawio  README.md  cifar10.ipynb  model_a.pth  model_b.pth  model_c.pth  pyproject.toml
Project2/: README.md  cifar10.ipynb  model_bit.pth  model_c.pth  model_combined.pth  model_pruned.pth  pyproject.toml
